--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,30 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  universal:
+    runs-on: ubuntu-latest
+    needs: goreleaser
+    steps:
+      - 
+        name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - 
+        name: Build and push universal binary
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: manojkarthick/macos-universal-binary-action@alpha
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          owner: "manojkarthick"
+          repo: "amalgam"
+          tag: "latest"
+          amd64: "darwin-amd64"
+          arm64: "darwin-arm64"
+          compressed: "true"
+          overwrite: "true"
+          universal: "all"
+          binary-path: "amalgam"
