--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: goreleaser
     steps:
-      - 
-        name: Log in to the Container registry
+      - name: Log in to Docker hub
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - 
         name: Build and push universal binary
         if: startsWith(github.ref, 'refs/tags/v')
@@ -47,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           owner: "manojkarthick"
-          repo: "amalgam"
+          repository: "amalgam"
           tag: "latest"
           amd64: "darwin-amd64"
           arm64: "darwin-arm64"
