--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,28 +28,4 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  universal:
-    runs-on: ubuntu-latest
-    needs: goreleaser
-    steps:
-      - name: Log in to Docker hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - 
-        name: Build and push universal binary
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: manojkarthick/macos-universal-binary-action@beta
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          owner: "manojkarthick"
-          repository: "amalgam"
-          tag: "latest"
-          amd64: "darwin-amd64"
-          arm64: "darwin-arm64"
-          compressed: "true"
-          overwrite: "true"
-          universal-identifier: "all"
-          binary-path: "amalgam"
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
